OC-2693 Adjust padding and width in form builder styles to prevent input clipping

--- a/jsapp/scss/components/_kobo.form-builder.scss
+++ b/jsapp/scss/components/_kobo.form-builder.scss
@@ -18,7 +18,7 @@ $s-form-builder-content-width: 1024px;
   overflow-y: scroll;
   margin-right: 0;
   transition: margin $t-form-builder-aside-open;
-  padding: 20px 40px;
+  padding: 10px;
   width: auto;
 
   .form-builder-message-box {
@@ -86,6 +86,12 @@ $s-form-builder-content-width: 1024px;
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .form-wrap {
+    padding: 20px;
   }
 }
 
